<resources>
    <string name="app_name">DroneMe</string>
    <string name="title_home">Home</string>
    <string name="title_photo">Take a selfie!</string>
    <string name="title_package">Get package!</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Transport_fragment">Start a Transport!</string>
    <string name="home_fragment">Your are at home!</string>
    <string name="nav_fragment">Start navigating!</string>
    <string name="settings_fragment">Settings!</string>
    <string name="photo_fragment">Take photos here!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
